--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "notes for angular, ngrx, react, redux",
   "main": "index.js",
   "scripts": {
-    "start": "http-server",
+    "start": "nodemon app.js",
+    "lint": "eslint app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,12 +19,25 @@
   },
   "homepage": "https://github.com/veereshmeesala/ui-book#readme",
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "http-server": "^0.11.1",
+    "nodemon": "^1.18.9"
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
     "express": "^4.16.4"
+  },
+  "nodemonconfig": {
+    "restartable": "rs",
+    "ignore": ["node_modules/**/node_modules"],
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4000
+    }
   }
 }
