--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "bootstrap": "^4.2.1",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
-    "express": "^4.16.4"
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "pug": "^2.0.3"
   },
   "nodemonconfig": {
     "restartable": "rs",
-    "ignore": ["node_modules/**/node_modules"],
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
